[package]
name = "ldk-lsp-client"
version = "0.1.0"
authors = ["Elias Rohrer <dev@tnull.de>"]
edition = "2018"
description = "Types and primitives to integrate a spec-compliant LSP with an LDK-based node."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning = { version = "0.0.117", default-features = false, features = ["max_level_trace", "std"] }
lightning-invoice = "0.25.0"

bitcoin = "0.29.0"

chrono = { version = "0.4.31", default-features = false, features = ["std", "serde"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0"
