[package]
name = "lightning-liquidity"
version = "0.1.0"
authors = ["John Cantrell <johncantrell97@gmail.com>", "Elias Rohrer <dev@tnull.de>"]
edition = "2021"
description = "Types and primitives to integrate a spec-compliant LSP with an LDK-based node."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["lightning/std", "bitcoin/std"]
no-std = ["hashbrown", "lightning/no-std", "bitcoin/no-std", "core2/alloc"]

[dependencies]
lightning = { version = "0.0.120", default-features = false, features = ["max_level_trace"] }
lightning-invoice = "0.28.0"
bitcoin = { version = "0.30.2", default-features = false }
hashbrown = { version = "0.8", optional = true }
core2 = { version = "0.3.0", optional = true, default-features = false }

chrono = { version = "0.4", default-features = false, features = ["serde", "alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.0.0"
tokio = { version = "1.35", default-features = false, features = [ "rt-multi-thread", "time", "sync", "macros" ] }
